[gd_scene load_steps=26 format=3 uid="uid://bgf7kas065jrb"]

[ext_resource type="Texture2D" uid="uid://c1xb8mhb0eugf" path="res://Sprites/Rap/Bubble Rap Background.png" id="1_tqba5"]
[ext_resource type="Script" path="res://Scenes/bubble_rap.gd" id="1_u8chl"]
[ext_resource type="Texture2D" uid="uid://camppyxnicl1l" path="res://Assets/Bubbles/bubble_1.png" id="2_qa01t"]
[ext_resource type="FontFile" uid="uid://c4041rmkmpuiq" path="res://Fonts/PLANK___.TTF" id="2_se2a3"]
[ext_resource type="Texture2D" uid="uid://dydm4h6an2tqe" path="res://Assets/Bubbles/bubble_2.png" id="3_qm73f"]
[ext_resource type="PackedScene" uid="uid://3jx3bsvdpka7" path="res://Scenes/Timer.tscn" id="3_tfcfe"]
[ext_resource type="Texture2D" uid="uid://r56yhj3jnwe7" path="res://Assets/Bubbles/bubble_3.png" id="4_isn8i"]
[ext_resource type="Texture2D" uid="uid://brii0m6y2rf4r" path="res://Assets/Bubbles/bubble_4.png" id="5_kwcnu"]
[ext_resource type="Shader" path="res://Shaders/grayscale.gdshader" id="9_qho2h"]
[ext_resource type="Shader" path="res://Shaders/highlight.gdshader" id="10_r0ec2"]
[ext_resource type="AudioStream" uid="uid://dkh6dg3cau5fu" path="res://Audio/SFX/bubble pop 1.wav" id="11_c5al6"]
[ext_resource type="AudioStream" uid="uid://do5g7x7sv5agn" path="res://Audio/SFX/bubble pop 2.wav" id="12_whgf3"]
[ext_resource type="AudioStream" uid="uid://b2efrhshlexbl" path="res://Audio/SFX/bubble pop 3.wav" id="13_godmv"]
[ext_resource type="AudioStream" uid="uid://c6xs5ppecbekc" path="res://Audio/SFX/bubble pop 4.wav" id="14_ugb5j"]
[ext_resource type="AudioStream" uid="uid://0u6jchw30q2k" path="res://Audio/SFX/bubble pop 5.wav" id="15_doi1n"]
[ext_resource type="AudioStream" uid="uid://d3tvto33qwr6c" path="res://Audio/SFX/bubble pop 6.wav" id="16_7v4lo"]
[ext_resource type="AudioStream" uid="uid://ktlkxttmjl6v" path="res://Audio/SFX/bubble pop 7.wav" id="17_43i48"]

[sub_resource type="Animation" id="Animation_vtpff"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:theme_override_colors/font_color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:theme_override_colors/font_shadow_color")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(0.490196, 0.27451, 0.745098, 1)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("../GrayScale:material:shader_parameter/gray_a")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}

[sub_resource type="Animation" id="Animation_0xlve"]
resource_name = "fade_text"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:theme_override_colors/font_color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 2.14),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:theme_override_colors/font_shadow_color")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 2.14355),
"update": 0,
"values": [Color(0.490196, 0.27451, 0.745098, 1), Color(0.490196, 0.27451, 0.745098, 0)]
}

[sub_resource type="Animation" id="Animation_iauxo"]
resource_name = "fade_to_gray"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("../GrayScale:material:shader_parameter/gray_a")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(0.233258, 1.86607),
"update": 0,
"values": [0.0, 1.0]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_80p7p"]
_data = {
"RESET": SubResource("Animation_vtpff"),
"fade_text": SubResource("Animation_0xlve"),
"fade_to_gray": SubResource("Animation_iauxo")
}

[sub_resource type="CircleShape2D" id="CircleShape2D_ynr1k"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_rbnn1"]
shader = ExtResource("9_qho2h")
shader_parameter/gray_a = 0.0

[sub_resource type="ShaderMaterial" id="ShaderMaterial_l6i4s"]
shader = ExtResource("10_r0ec2")
shader_parameter/Line_Smoothness = 0.045
shader_parameter/Line_Width = 0.054
shader_parameter/Brightness = 3.0
shader_parameter/Rotation_deg = 30.0
shader_parameter/Distortion = 1.8
shader_parameter/Speed = 0.7
shader_parameter/Position = 0.0
shader_parameter/Position_Min = 0.25
shader_parameter/Position_Max = 0.5
shader_parameter/Alpha = 1.0

[sub_resource type="AudioStreamRandomizer" id="AudioStreamRandomizer_7lgwa"]
streams_count = 7
stream_0/stream = ExtResource("11_c5al6")
stream_1/stream = ExtResource("12_whgf3")
stream_2/stream = ExtResource("13_godmv")
stream_3/stream = ExtResource("14_ugb5j")
stream_4/stream = ExtResource("15_doi1n")
stream_5/stream = ExtResource("16_7v4lo")
stream_6/stream = ExtResource("17_43i48")

[node name="Node2D" type="Node2D"]
script = ExtResource("1_u8chl")

[node name="TextureRect" type="TextureRect" parent="."]
offset_right = 40.0
offset_bottom = 40.0
texture = ExtResource("1_tqba5")

[node name="LevelTimer" parent="." instance=ExtResource("3_tfcfe")]

[node name="Lyrics" type="Label" parent="."]
offset_left = 437.0
offset_top = 12.0
offset_right = 847.0
offset_bottom = 179.0
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_shadow_color = Color(0.490196, 0.27451, 0.745098, 1)
theme_override_constants/shadow_outline_size = 25
theme_override_fonts/font = ExtResource("2_se2a3")
theme_override_font_sizes/font_size = 101
text = "LYRICS"
horizontal_alignment = 1

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
root_node = NodePath("../Lyrics")
libraries = {
"": SubResource("AnimationLibrary_80p7p")
}

[node name="RapBubble1" type="Sprite2D" parent="."]
position = Vector2(916, 823)
texture = ExtResource("2_qa01t")

[node name="RapBubbleCollision1" type="Area2D" parent="RapBubble1"]

[node name="RapBubbleCollisionShape1" type="CollisionShape2D" parent="RapBubble1/RapBubbleCollision1"]
scale = Vector2(12, 12)
shape = SubResource("CircleShape2D_ynr1k")

[node name="RapBubble2" type="Sprite2D" parent="."]
position = Vector2(1104, 155)
texture = ExtResource("3_qm73f")

[node name="RapBubbleCollision2" type="Area2D" parent="RapBubble2"]

[node name="RapBubbleCollisionShape2" type="CollisionShape2D" parent="RapBubble2/RapBubbleCollision2"]
scale = Vector2(12, 12)
shape = SubResource("CircleShape2D_ynr1k")

[node name="RapBubble3" type="Sprite2D" parent="."]
position = Vector2(1070, 426)
texture = ExtResource("4_isn8i")

[node name="RapBubbleCollision3" type="Area2D" parent="RapBubble3"]

[node name="RapBubbleCollisionShape3" type="CollisionShape2D" parent="RapBubble3/RapBubbleCollision3"]
scale = Vector2(12, 12)
shape = SubResource("CircleShape2D_ynr1k")

[node name="RapBubble4" type="Sprite2D" parent="."]
position = Vector2(1135, 674)
texture = ExtResource("5_kwcnu")

[node name="RapBubbleCollision4" type="Area2D" parent="RapBubble4"]

[node name="RapBubbleCollisionShape4" type="CollisionShape2D" parent="RapBubble4/RapBubbleCollision4"]
scale = Vector2(12, 12)
shape = SubResource("CircleShape2D_ynr1k")

[node name="GrayScale" type="ColorRect" parent="."]
z_index = 4
material = SubResource("ShaderMaterial_rbnn1")
offset_right = 1280.0
offset_bottom = 960.0
mouse_filter = 2

[node name="Highlight" type="ColorRect" parent="."]
visible = false
z_index = 5
material = SubResource("ShaderMaterial_l6i4s")
offset_right = 1280.0
offset_bottom = 960.0

[node name="WinningTimer" type="Timer" parent="."]
wait_time = 3.0

[node name="PopSFXPlayer" type="AudioStreamPlayer2D" parent="."]
stream = SubResource("AudioStreamRandomizer_7lgwa")

[connection signal="timeDone" from="LevelTimer" to="." method="_on_level_timer_time_done"]
[connection signal="mouse_entered" from="RapBubble1/RapBubbleCollision1" to="." method="_on_rap_bubble_collision_1_mouse_entered"]
[connection signal="mouse_exited" from="RapBubble1/RapBubbleCollision1" to="." method="_on_rap_bubble_collision_1_mouse_exited"]
[connection signal="mouse_entered" from="RapBubble2/RapBubbleCollision2" to="." method="_on_rap_bubble_collision_2_mouse_entered"]
[connection signal="mouse_exited" from="RapBubble2/RapBubbleCollision2" to="." method="_on_rap_bubble_collision_2_mouse_exited"]
[connection signal="mouse_entered" from="RapBubble3/RapBubbleCollision3" to="." method="_on_rap_bubble_collision_3_mouse_entered"]
[connection signal="mouse_exited" from="RapBubble3/RapBubbleCollision3" to="." method="_on_rap_bubble_collision_3_mouse_exited"]
[connection signal="mouse_entered" from="RapBubble4/RapBubbleCollision4" to="." method="_on_rap_bubble_collision_4_mouse_entered"]
[connection signal="mouse_exited" from="RapBubble4/RapBubbleCollision4" to="." method="_on_rap_bubble_collision_4_mouse_exited"]
[connection signal="timeout" from="WinningTimer" to="." method="_on_winning_timer_timeout"]
